[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/StateManager.gd" type="Script" id=3]
[ext_resource path="res://assets/scripts/PlayerDashing.gd" type="Script" id=4]
[ext_resource path="res://assets/scripts/PlayerWalking.gd" type="Script" id=5]
[ext_resource path="res://assets/scripts/PlayerIdle.gd" type="Script" id=6]
[ext_resource path="res://assets/scripts/PlayerFrozen.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 29 )

[sub_resource type="Animation" id=2]
resource_name = "dash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="PlayerIdle" type="Node" parent="StateManager"]
script = ExtResource( 6 )

[node name="PlayerWalking" type="Node" parent="StateManager"]
script = ExtResource( 5 )

[node name="PlayerDashing" type="Node" parent="StateManager"]
script = ExtResource( 4 )

[node name="PlayerFrozen" type="Node" parent="StateManager"]
script = ExtResource( 7 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/dash = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[connection signal="state_changed" from="StateManager" to="." method="_on_StateManager_state_changed"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
